# UERANSIM

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  RoutingIndicator-in-config-file.patch  asn2json.py  build.sh  cli.sh  decoder.py  encoder.py  main.py  makefile  nr-agent  nr-binder  nr-build  nr-cli  pom.xml  py2json.py  run.py  run.sh  ueran-envset.sh
native/nr-5g/: .gitignore  CMakeLists.txt
native/nr-5g/app/: app_monitor.hpp
native/nr-5g/crypt/: CMakeLists.txt  crypt.cpp  crypt.hpp  crypt_eea2.cpp  crypt_eea2.hpp  crypt_eea3.cpp  crypt_eea3.hpp  crypt_eia2.cpp  crypt_eia2.hpp  crypt_mac.cpp  crypt_mac.hpp  crypt_milenage.cpp  crypt_milenage.hpp  crypt_snow3g.cpp  crypt_snow3g.hpp  crypt_uea2.cpp  crypt_uea2.hpp  crypt_zuc.cpp  crypt_zuc.hpp
native/nr-5g/gnb/: CMakeLists.txt  gnb.cpp  gnb.hpp  gnb_app_task.cpp  gnb_app_task.hpp  gnb_config.cpp  gnb_config.hpp  gnb_gtp_task.cpp  gnb_gtp_task.hpp  gnb_gtp_utils.cpp  gnb_gtp_utils.hpp  gnb_mr_rls.cpp  gnb_mr_rls.hpp  gnb_mr_task.cpp  gnb_mr_task.hpp  gnb_ngap_context.cpp  gnb_ngap_encode.hpp  gnb_ngap_interf.cpp  gnb_ngap_interface.cpp  gnb_ngap_manag.cpp  gnb_ngap_management.cpp  gnb_ngap_nas.cpp  gnb_ngap_session.cpp  gnb_ngap_task.cpp  gnb_ngap_task.hpp  gnb_ngap_trans.cpp  gnb_ngap_transport.cpp  gnb_ngap_types.hpp  gnb_ngap_utils.cpp  gnb_ngap_utils.hpp  gnb_nts.cpp  gnb_nts.hpp  gnb_rrc_channel.cpp  gnb_rrc_nas.cpp  gnb_rrc_task.cpp  gnb_rrc_task.hpp  gnb_sctp_nts.cpp  gnb_sctp_nts.hpp  gnb_sctp_task.cpp  gnb_sctp_task.hpp  (+1 more)
native/nr-5g/gtp/: gtp_encode.cpp  gtp_encode.hpp  gtp_ext_header.cpp  gtp_ext_header.hpp  (+2 more)
src/: CMakeLists.txt  binder.cpp  cli.cpp  cli2.cpp  gnb.cpp  main_binder.cpp  main_gnb.cpp  main_ue.cpp  ue.cpp
src/app/: CMakeLists.txt  app_monitor.cpp  base_app.cpp  cli_base.cpp  cli_base.hpp  cli_cmd.cpp  cli_cmd.hpp  monitor.cpp  monitor.hpp  node_cli.cpp  node_cli.hpp  proc_table.cpp  proc_table.hpp  ue_ctl.cpp  ue_ctl.hpp
src/crypt/: CMakeLists.txt  crypt.cpp  crypt.hpp  crypt_eea2.cpp  crypt_eea3.cpp  crypt_eia2.cpp  crypt_eia2.hpp  crypt_mac.cpp  crypt_mac.hpp  crypt_milenage.cpp  crypt_milenage.hpp  crypt_snow3g.cpp  crypt_uea2.cpp  crypt_uea2.hpp  crypt_zuc.cpp  crypt_zuc.hpp  eea2.hpp  eea3.hpp  eia2.cpp  eia2.hpp  mac.hpp  milenage.cpp  snow3g.hpp
src/ext/: CMakeLists.txt
src/gnb/: CMakeLists.txt  gnb.cpp  gnb.hpp  gnb_app_task.cpp  gnb_app_task.hpp  gnb_gtp_task.cpp  gnb_gtp_task.hpp  gnb_gtp_utils.hpp  gnb_mr_rls.cpp  gnb_mr_rls.hpp  gnb_mr_task.cpp  gnb_mr_task.hpp  gnb_ngap_context.cpp  gnb_ngap_encode.cpp  gnb_ngap_interface.cpp  gnb_ngap_management.cpp  gnb_ngap_session.cpp  gnb_ngap_task.cpp  gnb_ngap_task.hpp  gnb_ngap_transport.cpp  gnb_ngap_utils.cpp  gnb_ngap_utils.hpp  gnb_rrc_channel.cpp  gnb_rrc_handler.cpp  gnb_rrc_nas.cpp  gnb_rrc_task.cpp  gnb_rrc_task.hpp  gnb_sctp_task.cpp  gnb_types.hpp  nts.cpp  nts.hpp  types.cpp  types.hpp
src/gtp/: CMakeLists.txt  encode.cpp  encode.hpp  ext_header.cpp  ext_header.hpp  gtp_encode.cpp  gtp_encode.hpp  gtp_ext_header.cpp  gtp_ext_header.hpp  gtp_message.hpp  message.cpp  message.hpp
src/lib/: CMakeLists.txt
src/log/: CMakeLists.txt
src/nas/: CMakeLists.txt  base.cpp  base.hpp  eap.cpp  eap.hpp  encode.cpp  enums.hpp  ie1.hpp  ie2.cpp  ie3.cpp  ie3.hpp  ie4.cpp  ie4.hpp  ie6.cpp  ie6.hpp  msg.cpp  msg.hpp  nas.cpp  nas_base.hpp  nas_eap.cpp  nas_eap.hpp  nas_encode.cpp  nas_encode.hpp  nas_enums.cpp  nas_ie1.cpp  nas_ie4.cpp  nas_ie4.hpp  nas_ie6.cpp  nas_ie6.hpp  nas_msg.cpp  nas_msg.hpp  nas_proto_conf.cpp  nas_proto_conf.hpp  nas_timer.cpp  nas_timer.hpp  nas_utils.hpp  nas_values.cpp  nas_values.hpp  timer.cpp  timer.hpp  (+4 more)
src/rlc/: CMakeLists.txt  entity_am.hpp  entity_tm.cpp  func.hpp  rlc.cpp  rlc.hpp  rlc_encoder.hpp  rlc_entity_am.cpp  rlc_entity_tm.cpp  rlc_entity_tm.hpp  rlc_func.cpp  rlc_func.hpp  rlc_test.cpp  rlc_utils.cpp  rlc_utils.hpp  test.cpp  test2.cpp  test2.hpp  utils.cpp
src/rrc/: CMakeLists.txt  encode.hpp  rrc.cpp  rrc.hpp  rrc_encode.cpp  rrc_encode.hpp
src/sas/: CMakeLists.txt  pdu.cpp
src/sctp/: CMakeLists.txt  client.cpp  internal.cpp  sctp.cpp  sctp.hpp  sctp_client.cpp  sctp_client.hpp  sctp_error.cpp  sctp_error.hpp  sctp_handler.cpp  sctp_internal.cpp  sctp_internal.hpp  sctp_server.cpp  sctp_server.hpp  server.hpp  types.cpp  types.hpp
src/test/: main.cpp  test_ecies_profile_b.cpp  test_ecies_soft_fail.cpp  test_ecies_structural.cpp  test_ecies_vector.cpp  test_hn_key_bounds.cpp  test_micro_ecc.cpp  test_regression.cpp  test_util.hpp
src/udp/: CMakeLists.txt  server.cpp  server.hpp  server_task.hpp  udp_error.cpp  udp_error.hpp  udp_server.cpp  udp_server.hpp  udp_server_task.cpp  udp_server_task.hpp
src/ue/: CMakeLists.txt  cmd.cpp  cmd.hpp  nts.cpp  nts.hpp  task.cpp  task.hpp  timer.cpp  timer.hpp  types.cpp  types.hpp  ue.cpp  ue.hpp  ue_app_task.cpp  ue_app_task.hpp  ue_mr_rls.cpp  ue_mr_rls.hpp  ue_mr_task.cpp  ue_nas_keys.cpp  ue_nas_keys.hpp  ue_nas_mm.cpp  ue_nas_sm.cpp  ue_nas_task.cpp  ue_nas_task.hpp  ue_nas_timer.cpp  ue_nts.cpp  ue_rrc_channel.cpp  ue_rrc_handler.cpp  ue_rrc_nas.cpp  ue_rrc_task.cpp  ue_rrc_task.hpp  ue_tun.cpp  ue_tun.hpp  ue_tun_config.cpp  ue_tun_config.hpp  ue_tun_task.cpp  ue_tun_task.hpp  ue_types.hpp
src/urs/: CMakeLists.txt  rls_pdu.cpp  rls_pdu.hpp  sas_pdu.cpp  sas_pdu.hpp  sra_pdu.cpp  sra_pdu.hpp  urs_rls.cpp  urs_rls.hpp  urs_rls_gnb_entity.cpp  urs_rls_gnb_entity.hpp  urs_rls_ue_entity.cpp  urs_rls_ue_entity.hpp
src/utils/: CMakeLists.txt  bit_buffer.cpp  bit_buffer.hpp  bit_string.cpp  bit_string.hpp  bits.cpp  bits.hpp  common.cpp  common.hpp  common_types.cpp  common_types.hpp  compound_buffer.cpp  compound_buffer.hpp  concurrent_map.cpp  concurrent_map.hpp  constants.hpp  fd_base.cpp  fd_base.hpp  io.cpp  io.hpp  json.cpp  json.hpp  libc_error.cpp  libc_error.hpp  light_sync.cpp  light_sync.hpp  linked_list.cpp  linked_list.hpp  locked.cpp  locked.hpp  logger.cpp  logger.hpp  network.cpp  network.hpp  nts.cpp  nts.hpp  octet.cpp  octet.hpp  octet_buffer.cpp  octet_buffer.hpp  (+20 more)
(+12398 files in other folders)
