cmake_minimum_required(VERSION 3.17)
project(ueransim)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(src/asn/asn1c)
add_subdirectory(src/asn/rrc)
add_subdirectory(src/asn/ngap)
add_subdirectory(src/asn/utils)
add_subdirectory(src/log)
add_subdirectory(src/utils)
add_subdirectory(src/sctp)
add_subdirectory(src/gnb)
add_subdirectory(src/rlc)
add_subdirectory(src/nas)
add_subdirectory(src/rrc)
add_subdirectory(src/gtp)
add_subdirectory(src/udp)
add_subdirectory(src/app)
add_subdirectory(src/urs)
add_subdirectory(src/crypt)
add_subdirectory(src/ue)

add_executable(nr-gnb src/main_gnb.cpp)
add_executable(nr-ue src/main_ue.cpp)

target_link_libraries(nr-gnb pthread)
target_link_libraries(nr-ue pthread)

target_compile_options(nr-gnb PRIVATE -Wall -Wextra -pedantic)
target_compile_options(nr-ue PRIVATE -Wall -Wextra -pedantic)

target_link_libraries(nr-gnb asn-rrc)
target_link_libraries(nr-gnb asn-ngap)
target_link_libraries(nr-gnb utils)
target_link_libraries(nr-gnb gnb)
target_link_libraries(nr-gnb rlc)
target_link_libraries(nr-gnb logger)
target_link_libraries(nr-gnb rrc)
target_link_libraries(nr-gnb gtp)
target_link_libraries(nr-gnb udp)
target_link_libraries(nr-gnb app)
target_link_libraries(nr-gnb urs)
target_link_libraries(nr-gnb crypt)

target_link_libraries(nr-ue utils)
target_link_libraries(nr-ue rlc)
target_link_libraries(nr-ue logger)
target_link_libraries(nr-ue nas)
target_link_libraries(nr-ue rrc)
target_link_libraries(nr-ue udp)
target_link_libraries(nr-ue app)
target_link_libraries(nr-ue urs)
target_link_libraries(nr-ue crypt)
target_link_libraries(nr-ue ue)