cmake_minimum_required(VERSION 3.17)
project(ueransim)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(asn/asn1c)
add_subdirectory(asn/rrc)
add_subdirectory(asn/ngap)
add_subdirectory(asn/utils)
add_subdirectory(log)
add_subdirectory(utils)
add_subdirectory(sctp)
add_subdirectory(gnb)
add_subdirectory(rlc)
add_subdirectory(nas)
add_subdirectory(rrc)
add_subdirectory(gtp)
add_subdirectory(udp)
add_subdirectory(app)
add_subdirectory(urs)
add_subdirectory(crypt)
add_subdirectory(ue)

add_executable(nr-gnb main_gnb.cpp)
add_executable(nr-ue main_ue.cpp)

target_link_libraries(nr-gnb pthread)
target_link_libraries(nr-ue pthread)

target_compile_options(nr-gnb PRIVATE -Wall -Wextra -pedantic)
target_compile_options(nr-ue PRIVATE -Wall -Wextra -pedantic)

target_link_libraries(nr-gnb asn-rrc)
target_link_libraries(nr-gnb asn-ngap)
target_link_libraries(nr-gnb utils)
target_link_libraries(nr-gnb gnb)
target_link_libraries(nr-gnb rlc)
target_link_libraries(nr-gnb logger)
target_link_libraries(nr-gnb rrc)
target_link_libraries(nr-gnb gtp)
target_link_libraries(nr-gnb udp)
target_link_libraries(nr-gnb app)
target_link_libraries(nr-gnb urs)
target_link_libraries(nr-gnb crypt)

target_link_libraries(nr-ue utils)
target_link_libraries(nr-ue rlc)
target_link_libraries(nr-ue logger)
target_link_libraries(nr-ue nas)
target_link_libraries(nr-ue rrc)
target_link_libraries(nr-ue udp)
target_link_libraries(nr-ue app)
target_link_libraries(nr-ue urs)
target_link_libraries(nr-ue crypt)
target_link_libraries(nr-ue ue)